# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xDanDO6UsN6HOwHGfpd2U7Cfzb1G7M1NfLvT4kJlY0RQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1L0Idp53ID92H1aBznHimZ82YI1eCQ0Dezx3pppV9F18=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x19vdkWa0YjnjR52rmmr0gWUuKhLIQHweXDPXt2eIV4Cs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xTic89Dd9tl7Qy7PlPGLkpJzBgcKlI64jurvNS-HhKrI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1R6zTjtz1Eo_isJ2G15_0le_Ywn_aQO5CfWMx6ssvjpA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1MRcl-2lqtc13zLjzm2Ew9QLw0dGNCdsT7h2gjxqaQgo=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1JqJHZOCybtsjzSYPIMNL1fb-FYGqRUnvojmQS-yX1-E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT21Ya469rsYjeu-DxXDgxkQ04MywdZwi9n-IPLePnFnLQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT27wYYhQNHk5UKmLVvV2kbVe4HiujKl57BzFZcQ7iqcbk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2F1b-p8nOX0LpZudQo4ZBPuob61J3nuGjiomoLKAUkI4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2GusPnvKU1zZUqmjnKpm1AV7O7PyvOwZ4JuS-LGKcLo0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2MnzI5AdOZvIrQfBSBkj4-77uMknru0HGmvJsjRXXUpc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1Brs5xQpgdpHuShmPk8C8EHwhxTUa7-sxOxEDcRw2VLg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1HefWjtAB7gxr7JnOGW2Wc1PA3BSe8PRpzjBOQEgSJfo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1VOiSdkWKhecFKQJgtxf_BUcrSf4DOQfvnBTEBuPEHmw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1a1VP6OVKlHIIxOPs3D85vaebetzbVJyPQf3jtnzLdU4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1g5hdFTyQIpGPmU0uo5P_qmP5wEHi0QJscXRBl5k3duA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1rCETx-aNkJOO0Y5m39dBYkqVua3DsGkwkN-aIrM45DA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x18AFwtG17cLnx6w13PiUnMLbhQ0_LK_N2dhmMzWl2Tpw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64TBXR8GkBDH7bJnFsMA7qJudEt92pXfByx__qqaKKSxQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64sb3rSE3lirko14XRtehECXGrk_CRguVAr204E4X7rmY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11WluLrS66g2bdzWqRrbniuK9O7Jy8bE1b_UXchb2Nzg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1hWLv_jgGO9qym-vdnpksrWDy1qZ5X_7_yL4FSY1_oK4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1xQxs0EI9WAFgDmNoLi2yXtnZzyvmUkRG8Vr_kh7x7CQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_RCMMg-rsvaMxeqGX8_m3gfYe0uZ1SBJnm8rOoLYtpXo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs__TvQ9e7VsOJSOv-TmC1MQWxh6hnlXfzP4lrUdaZlWsM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_i422O8U8W5vTJceLehCWgyyYpXbAB8W3dRTg6Mq3x48=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32Ai9NF0KQM0P7K_NPtxXIoP0XmrPO0QherL4hjkW-s5s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32HqdfYVRvMqa_9iUMGB3dZjREt6lwAFo2D7tUKAlndt8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32trMxs-lmS_kHlM58aaUeeuCJG-ngeczkQRHPQYCoHkk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32Aa1mRYWjFJ6xDCsga_d3S2CoL4QzXPQ7ftqFZWzutF8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xYHP7iOgokK14RkfMedz_UUBr6yKbQzMIGpbXUTX_PGw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xbCuCXo9IoYcIKuI2ZQN_lJC4r3YrNk3jV6HnV4RY8Os=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1_N7FKz4mSoG7g_EEgW0-g0htEhyjuLS7Fi4k5OE_kRk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1cEraC3MBjCibf4x95NDb81M34DDDxSbxb75q1isDRv4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1cEwMra7tIIOnNOFO7yxLyS8zB-PzOGUhW1drnFczMUQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1nqlAe9i7suXuw0PR8ymxVLjdYc18wsMTkIrDqdr_f7A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1rJVMlio7YnTZji81RytsO5IkqIVskPvFh0YpOw4fpLA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1trWPvwbtUDty1Coqb-GSrtmkcrbO-IVY08T1gLEAjIg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT19TYHLezRfFbH9A8poOsRTzUoWITCD4WLlnFC8tTrfI4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1uI0Uf7hwgpNCQolBtztyENFSIOiatHhER5KCqpp1J8s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT33I_8IO5Fw5iqVVJbQiKF6SJddWayanpnCneiL4jEjuo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3_167l-TvhVSxR0IM68tMtGK8Mw7iXIAqnXlyN9xShAM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4JbZ-gYHWK3fxbV7EvvML3luFbSD_IjI-VwS_1m9gKLw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4ftChu_fbV3OelPk7PtmLo83ddKsqf9G_7IqabB47Qlg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16Y2fd1_Zy7bCpzLzX5H7A4Kw33u-ID4Uv_AhyBFWTyHo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16sCrBSOuyWoH8f-lJM-gxoQQZ60WXODYaum4oWncYG84=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16sQs3cZm-EJw5BAUwJaXdnPToEfGsIIoSeubuNZsBUg4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16mog6kFk2sWt0eFChBOiNRp5RSASAYjqzqC8SYRAiuPc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16PSk2NNhXpSeXUHtiqtt-Gz0cjq9UfQlK3RuSQ7SY1mc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x163opwYC5nEKvGF1pFTBVDayPpGzxsS36OgXW2UAZcxbA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x164b0RMTB-WUOtF6vyvvYOKxe9vDshGJFa0R1Jgm0Dx-8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16XNJyTwN1TMaof78yeNnaY4h3KRaap8qlBcPKTHLBiD0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16MiXKjd428EPig5wVW15U1LH54dq2i6c3XMDqxP8VifI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16HNAC3enxmbma3qX9vvi6e8llo3YLdO_LWKYm8rTcG28=',
      'err': 0,
    }),
  ])
# ---
